Fix yarn/cache errors - Use npm with legacy-peer-deps

--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -18,10 +18,15 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
+        registry-url: 'https://registry.npmjs.org'
     
-    - name: 📦 Install dependencies
-      run: npm ci
+    - name: 🧹 Clear npm cache
+      run: npm cache clean --force
+    
+    - name: 📦 Install dependencies with npm (not yarn)
+      run: |
+        rm -f yarn.lock
+        npm install --legacy-peer-deps
     
     - name: 🏗️ Setup Expo
       uses: expo/expo-github-action@v8
