--- a/.github/workflows/simple-build.yml
+++ b/.github/workflows/simple-build.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
+        registry-url: 'https://registry.npmjs.org'
     
     - name: ☕ Setup Java 17
       uses: actions/setup-java@v4
@@ -35,9 +35,11 @@ jobs:
         build-tools: 34.0.0
         ndk-version: 25.1.8937393
     
-    - name: 📦 Install NPM Dependencies
+    - name: 🧹 Clear caches and install dependencies
       run: |
-        npm ci
+        rm -f yarn.lock
+        npm cache clean --force
+        npm install --legacy-peer-deps
         npx expo install --fix
     
     - name: 🔨 Prebuild Android Project
